Mut codegen works but caching is producing compile errors